Updated Aspect and Feature to insure consistency -- shouldn't be able to change the AspectInfo Milesones once a Feature exists.